--- a/css/sass/default/utilities/tools/structure/_truncate-text.scss
+++ b/css/sass/default/utilities/tools/structure/_truncate-text.scss
@@ -1,10 +1,11 @@
-//------------------------- Unlist
-@mixin unlist {
-    list-style: none;
-    margin: auto;
-    padding: 0;
+//------------------------- Truncate Text
+@mixin truncate {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-%unlist {
-    @include unlist;
+%truncate {
+    @include truncate;
 }
