--- a/css/sass/default/utilities/tools/visual/_corner-radius.scss
+++ b/css/sass/default/utilities/tools/visual/_corner-radius.scss
@@ -11,6 +11,7 @@
         top-right-radius: $toprightradius;
         bottom-right-radius: $bottomrightradius;
         bottom-left-radius: $bottomleftradius;
+        overflow: hidden;
     }
         
 }
